--- a/RECETA/css/receta.css
+++ b/RECETA/css/receta.css
@@ -9,13 +9,13 @@
 
 
 @font-face {
-    font-family: titulos;
-    src: url();
+    font-family:Textos;
+    src: url(../font/Roboto-Black.ttf);
 }
 
 @font-face {
-    font-family: texto;
-    src: url();
+    font-family:Titulos;
+    src: url(../font/Agbalumo-Regular.ttf);
 }
 
 * {box-sizing: border-box;}                      /* el width incluye el padding
@@ -25,7 +25,8 @@
 
 body {background-color:rgb(0, 128, 111);
 background-image: url(../img/depositphotos_57911289-stock-illustration-cook-objects-doodles-seamless-pattern.jpg);
-background-size: 50%;}
+background-size: 50%;
+font-family: textos;}
 
 #wrapper {background-color: aliceblue;
             width: 80%;                         /* el widht va en % */
@@ -47,8 +48,24 @@ h1 {border: 2px solid rgb(0, 128, 117);
     border-radius:0px 0px 60px 60px;
     /* sombra de caja */
     box-shadow: 15px 15px 5px gray;
+    font-family: titulos;
+}
+
+.macarronesconchorizo {
+    width: 80%;
+    margin: 5%;
+}
+
+.tartadegalletas{
+    display: flex;
+    justify-content: center;
 }
 
 dt {font-weight: bold;
     color: rgb(0, 128, 111);
     font-size: 1.2em;}
+
+    /**gestion de la responsividad **/
+
+@media only screen and (width<600px) {
+    #wrapper {width:95%}}
