--- a/proyecto2/css/estilo.css
+++ b/proyecto2/css/estilo.css
@@ -19,9 +19,37 @@ body {background-image: url(../img/iglesia.jpg);
                 margin: auto;
                 background-color: rgb(0, 0, 0);}
 
+.titulo {font-family: runas;
+        
+
+}
 /************************************* barra de navegacion **************************************/
 
 nav {font-family: runas;}
+
+.topnav {
+    overflow: hidden;
+    background-color: rgb(167, 130, 10);
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 1.5em;
+}
+
+.topnav a:hover {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
+
+.topnav .icon {
+    display: none;
+}
 
 /************************************* Hero section **************************************/
 
@@ -39,6 +67,9 @@ nav {font-family: runas;}
 
 
 /**************************** intro ***************************/
+#intro{
+}
+
 #jose {
     float: right;
     width: 30%;
@@ -61,8 +92,63 @@ h1{text-align: center;
     background-repeat: no-repeat;}
 
 
+#intro p::first-letter{font-size: 1.5em;
+                        color: rgb(153, 0, 255);
 
-/************************************galeria**************************/
+}
+
+/********************* section ejemplo-grid-2 *************************/
+
+.grid-2{display:grid; /* el contenedor va a sufrir división en columnas */ 
+        grid-template-columns: 50% 50%;}
+
+.col-2 {padding: 4%;}
+
+#ejemplo-grid-2  img {width: 100%;}
+
+/************************ secion mitos **********************************/
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #444;
+    font-size: 1.2em;
+    color: #eee;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+    background-color: #797979;
+}
+
+  /* Style the accordion panel. Note: hidden by default */
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+}
+
+.accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+  }
+
+  
+/******************************* galeria *****************************/
 
 #gallery {padding: 5%;}
 
@@ -77,8 +163,3 @@ h1{text-align: center;
 
 
 
-/**********************<a href="https://www.flaticon.es/iconos-gratis/militar" title="militar iconos">Militar iconos creados por RaftelDesign - Flaticon</a> */
-
-/********************** UX Gun  aviones volando*********************/
-/**********************RECEP TİRYAKİ hombre cargando arma *************/
-/*********************** Specna Arms francontirador escondido ***********/
